--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+
+    <title>Frontend Mentor | Easybank landing page</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!-- Home About Contact Blog Careers Request Invite Next generation digital
+    banking Take your financial life online. Your Easybank account will be a
+    one-stop-shop for spending, saving, budgeting, investing, and much more.
+    Request Invite Why choose Easybank? We leverage Open Banking to turn your
+    bank account into your financial hub. Control your finances like never
+    before. Online Banking Our modern web and mobile applications allow you to
+    keep track of your finances wherever you are in the world. Simple Budgeting
+    See exactly where your money goes each month. Receive notifications when
+    you’re close to hitting your limits. Fast Onboarding We don’t do branches.
+    Open your account in minutes online and start taking control of your
+    finances right away. Open API Manage your savings, investments, pension, and
+    much more from one account. Tracking your money has never been easier.
+    Latest Articles By Claire Robinson Receive money in any currency with no
+    fees The world is getting smaller and we’re becoming more mobile. So why
+    should you be forced to only receive money in a single … By Wilson Hutton
+    Treat yourself without worrying about money Our simple budgeting feature
+    allows you to separate out your spending and set realistic limits each
+    month. That means you … By Wilson Hutton Take your Easybank card wherever
+    you go We want you to enjoy your travels. This is why we don’t charge any
+    fees on purchases while you’re abroad. We’ll even show you … By Claire
+    Robinson Our invite-only Beta accounts are now live! After a lot of hard
+    work by the whole team, we’re excited to launch our closed beta. It’s easy
+    to request an invite through the site ... About Us Contact Blog Careers
+    Support Privacy Policy Request Invite © Easybank. All Rights Reserved -->
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">istir</a>.
+    </div>
   </body>
 </html>
